--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,12 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "http-errors": "~1.6.3",
     "mongodb": "^6.12.0",
     "morgan": "~1.9.1",
     "openai": "^4.77.3",
-    "pug": "2.0.0-beta11",
+    "pug": "^3.0.3",
     "uuid": "^11.0.4"
   },
   "type": "module"
